fix because scroll on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@
 }
 
 body {
-    min-height: 100vh;
+    min-height: calc(100dvh - 2rem);
     font-family: 'Roboto', sans-serif;
     background-color: #ede7e3;
 }
